--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .body {
-    font-family:"Roboto",sans-serif;
+    font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #FFFFFF;
 }
@@ -31,16 +31,17 @@ button {
 }
 
 address {
-font-style: normal;
+    font-style: normal;
 }
 
 img {
     display: block;
 }
+
 .container {
     width: 1158px;
     padding: 0 15px;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 .link {
@@ -48,26 +49,31 @@ img {
 }
 
 .visually-hidden {
-        display: none;
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        bottom: 0;
-        white-space: nowrap;
-        clip-path: inset(100%);
-        clip: rect(0 0 0 0);
-        overflow: hidden;
-    }
+    display: none;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    bottom: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 /** -------------HEADER----------------*/
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
     display: flex;
+    width: 1158рх;
+    align-items: center;
 }
 
 .header-nav {
@@ -84,8 +90,6 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    display: flex;
-    align-items: center;
     margin-right: 76px;
 }
 
@@ -98,10 +102,6 @@ img {
     gap: 40px;
 }
 
-.header-menu-item {
-    align-items: center;
-}
-
 .header-menu-link {
     color: #2e2f42;
     font-size: 16px;
@@ -110,16 +110,28 @@ img {
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link:hover,
-.header-address-link:hover {
+.header-menu-link:focus {
     color: #404BBF;
 }
 
-.header-menu-link:focus,
-.header-address-link:focus {
-color: #404BBF;
+.mark {
+    position: relative;
+    color: #404BBF;
+}
+
+.mark::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404BBF;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
 }
 
 .address {
@@ -128,7 +140,7 @@ color: #404BBF;
 
 .header-address-list {
     display: flex;
-    gap:40px;
+    gap: 40px;
 }
 
 .header-address-link {
@@ -138,6 +150,12 @@ color: #404BBF;
     letter-spacing: 0.02em;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-address-link:hover,
+.header-address-link:focus {
+    color: #404BBF;
 }
 
 /**-------------Section-1-------------*/
@@ -145,10 +163,18 @@ color: #404BBF;
 .section-one {
     padding: 188px 0;
     background-color: #2E2F42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)),
+    url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .header-one {
-    color:#FFF;
+    color: #FFF;
     text-align: center;
     font-size: 56px;
     font-weight: 700;
@@ -177,10 +203,11 @@ color: #404BBF;
     margin-left: auto;
     margin-right: auto;
     min-width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-one-btn:hover {
-    background: #404BBF;
+    background-color: #404BBF;
 }
 
 .header-one-btn:focus {
@@ -194,11 +221,10 @@ color: #404BBF;
 }
 
 .sectiontwo-container {
-    width: 1128px;
-    height: 104px;
+    width: 1158px;
     background: #FFF;
-    flex-shrink: 0; 
-    }
+    flex-shrink: 0;
+}
 
 .header-features {
     display: flex;
@@ -206,7 +232,18 @@ color: #404BBF;
 }
 
 .features-item {
-width: calc((100% - 72px)/4);
+    width: calc((100% - 72px)/4);
+}
+
+.div-features {
+    background-color: #F4F4FD;
+    height: 112px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+    margin-bottom: 8px;
 }
 
 .header-features-list {
@@ -219,7 +256,7 @@ width: calc((100% - 72px)/4);
 }
 
 .header-features-info {
-    color:  #434455;
+    color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -228,8 +265,8 @@ width: calc((100% - 72px)/4);
 /**---------------------OUR TEAM Section-3----------*/
 
 .section-three {
-padding: 120px 0;
-background-color: #F4F4FD;
+    padding: 120px 0;
+    background-color: #F4F4FD;
 }
 
 .header-team {
@@ -247,15 +284,18 @@ background-color: #F4F4FD;
     width: calc((100% - 3*24px)/4);
     border-radius: 0px 0px 4px 4px;
     background-color: #FFFFFF;
-  }
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 
 .container-team {
-padding: 32px 0;
+    padding: 32px 0;
 }
 
 .our-team {
     display: flex;
-    gap:24px;
+    gap: 24px;
 }
 
 .team-members {
@@ -269,85 +309,203 @@ padding: 32px 0;
 }
 
 .team-info {
-    color:#202021;
+    color: #202021;
     text-align: center;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+
+.team-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
+
+.team-icons-list {
+    height: 40px;
+    width: 40px;
+}
+
+.team-items-link {
+    background-color: #4D5AE5;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-svgimages {
+    color: #f4f4fd;
+
+}
+
+.team-items-link:hover,
+.team-items-link:focus {
+    background-color: #404BBF;
 }
 
 /**--------------PORTFOLIO-Section-4--------------*/
 
 .section-four {
-padding-top: 120px;
-padding-bottom: 120px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .header-portfolio {
-text-align: center;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-margin-bottom: 72px;
+    text-align: center;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
-display: flex;
-flex-wrap: wrap;
-column-gap: 24px;
-row-gap: 48px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.main-wrap-text {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-list-items:hover .portfolio-text {
+    transform: translateY(0%);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
+.portfolio-text {
+    color: #F4F4FD;
+    font-family: Roboto;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    position: absolute;
+    top: 0;
+    background: #4D5AE5;
+    height: 100%;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+    transform: translateY(100%);
 }
 
 .portfolio-list-items {
-width: calc((100% - 48px)/3);
+    width: calc((100% - 48px)/3);
+    transition: color background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .container-app {
-padding: 32px 16px;
-border: 1px solid #e7e9fc;
-border-top: none;
-margin-bottom: 8px;
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
 }
 
 .portfolio-features {
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-margin-bottom: 8px;
+    color: #2E2F42;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .portfolio-item {
-color: #434455;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 /**-----------------FOOTER--------------*/
 
 .footer {
-padding: 100px 0;
-background: #2E2F42;
+    padding: 100px 0;
+    background: #2E2F42;
+}
+
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+
+.logo-par {
+    margin-right: 120px
 }
 
 .footer-logo {
-display: inline-block;
-color: #4d5ae5;
-font-family: "Raleway", sans-serif;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-margin-bottom: 16px;
-}
-
-.footer-info {
-color:#F4F4FD;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-width: 264px;
+    display: inline-block;
+    color: #4d5ae5;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: 16px;
 }
 
 .logo-weight {
-color: #F4F4FD;
+    color: #F4F4FD;
+}
+
+.footer-info {
+    color: #F4F4FD;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    width: 264px;
+}
+
+.footer-socbox-container,
+.footer-icons-name {
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-icons {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-icons-list {
+    height: 40px;
+    width: 40px;
+}
+
+.footer-items-link {
+    background-color: #4D5AE5;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: color background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-socicons {
+    color: #f4f4fd;
+
+}
+
+.footer-items-link:hover,
+.footer-items-link:focus {
+    background-color: #31D0AA;
 }
