--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ img {
 }
 
 .team-svgimages {
-    color: #f4f4fd;
+    fill: #f4f4fd;
 
 }
 
@@ -378,12 +378,14 @@ img {
 }
 
 .portfolio-list-items:hover {
-    transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.portfolio-text:hover {
+transform: translateY(0%);
+}
 
 .portfolio-text {
     color: #F4F4FD;
@@ -500,7 +502,7 @@ img {
 }
 
 .footer-socicons {
-    background-color: #f4f4fd;
+ fill: #f4f4fd;
 
 }
 
