--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,10 @@ transform: translateY(0%);
 .portfolio-list-items {
     width: calc((100% - 48px)/3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
+.main-wrap-text:hover {
+transform: translateY(0%);
 }
 
 .container-app {
