--- a/css/styles.css
+++ b/css/styles.css
@@ -377,15 +377,8 @@ img {
     overflow: hidden;
 }
 
-.portfolio-list-items:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-text:hover {
+.portfolio-list-items:hover .portfolio-text {
 transform: translateY(0%);
-}
 
 .portfolio-text {
     color: #F4F4FD;
@@ -405,6 +398,10 @@ transform: translateY(0%);
 .portfolio-list-items {
     width: calc((100% - 48px)/3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 }
 
 .main-wrap-text:hover {
